integrations/nextcloud/snappymail/app/themes/Nextcloud25/styles.css
/* ... */
.b-folders .b-content {
    top: 60px;
    bottom: 162px;
}

.b-folders .b-content.show-on-panel-disabled {
    bottom: 56px;
}

/*
 * icon colors
 */

.iconcolor-green {
    color: var(--color-success) !important;
}

.iconcolor-red {
    color: var(--color-error) !important;
}

/*
 * side panel
 */

#V-SettingsMenu nav a,
.b-folders li a.selectable {
    margin: 2px;
    padding: 0 2em 0 15px;
    height: 38px;
    line-height: 38px;
    border-radius: var(--border-radius-pill);
    color: unset;
    border: none;
}

#V-SettingsMenu nav a {
    height: 44px;
    line-height: 44px;
}

#V-SettingsMenu nav a.selected,
.b-folders li a.selectable.selected {
    color: unset;
    background-color: var(--color-primary-light);
}

#V-SettingsMenu nav a:not(.selected):hover,
#V-SettingsMenu nav a:not(.selected):focus,
.b-folders li a.selectable:not(.selected):hover,
.b-folders li a.selectable:not(.selected):focus {
    color: unset;
    background-color: var(--color-background-hover);
}

.b-folders .b-folders-system a[data-unread]::after {
    display: block;
    margin: 0 ; 
    top: 50%;
    transform: translateY(-50%);

    color: var(--color-primary-element);
    background-color: var(--color-primary-light);

    text-shadow: none;
}

.b-folders hr {
    border-top: solid var(--color-main-text);
    border-radius: var(--border-radius-pill);
    opacity: .1;
}

.b-folders input {
    width: calc(100% - 10px) !important;
    margin: 5px;
    opacity: .7;
}

.b-footer.btn-toolbar.hide-mobile,
.b-footer.btn-toolbar .btn-group.hide-on-panel-disabled {
    display: flex;
    flex-direction: column;
    align-content: stretch;
    justify-content: flex-start;
    height: unset;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    bottom: 0;
}

.b-footer.btn-toolbar .btn-group {
    padding: 3px !important;
}

/*
 * buttons
 */

.btn {
    min-height: 36px;
    height: 36px;
    box-sizing: border-box;
    padding: 8px 14px;
    line-height: 20px;
    color: var(--color-main-text);
    background-color: var(--color-background-dark);
    border: 1px solid var(--color-border-dark);
    border-radius: var(--border-radius-pill);
    font-size: var(--default-font-size);
}

.btn.btn-thin {
    padding-right: 9px;
    padding-left: 9px;
}

.btn.disabled, .btn[disabled],
.btn.disabled:hover, .btn[disabled]:hover,
.btn.disabled:focus, .btn[disabled]:focus,
.btn.disabled:active, .btn[disabled]:active {
    outline: none;
    opacity: .5;
    filter: saturate(0.7);
}

.btn:not(.disabled, [disabled]):hover,
.btn:not(.disabled, [disabled]):focus {
    border-color: var(--color-primary-element);
    outline: none;
    opacity: unset;
}

.btn:not(.disabled, [disabled]):active {
    outline: none;
    opacity: unset;
    background-color: var(--color-main-background);
    color: var(--color-text-light);
}

.btn, .btn.active, .btn:active, .btn.disabled, .btn[disabled] {
    text-shadow: none;
    box-shadow: none;
}

.btn.buttonCompose {
    font-weight: bold;
    max-width: 100%;
    width: 100%;
}

.btn.btn-success {
    color: var(--color-primary-element-text);
    background-color: var(--color-primary-element);
    border-color: var(--color-primary-element);
}

.btn.btn-success:hover,
.btn.btn-success:focus {
    background-color: var(--color-primary-element-hover) !important;
    border-color: var(--color-primary-element-hover);
}

.btn.buttonCompose:active {
    color: var(--color-primary-text-dark);
}

.btn.buttonCompose,
.b-folders .btn.buttonContacts,
.b-footer.btn-toolbar .btn-group .btn {
    box-sizing: border-box;
    padding: 4px 14px;
    line-height: 36px;
    height: 44px;
    min-width: -moz-fit-content;
    min-width: -webkit-fill-available;
    min-width: fit-content;

    font-size: var(--default-font-size);
    border-radius: var(--border-radius-pill);
}

.b-footer.btn-toolbar .btn-group .btn {
    background: transparent;
    text-align: left;
    font-size: 22px;
    margin: 3px;
    border: unset;
}

.b-footer.btn-toolbar .btn-group.hide-on-panel-disabled .btn {
    width: -webkit-fill-available;
    width: -moz-available;
    width: fill-available;
}

.b-footer.btn-toolbar .btn-group .btn.fontastic {
    background-color: var(--color-main-background);
}

.b-footer.btn-toolbar .btn-group .btn:after {
    font-family: var(--font-face);
    font-size: var(--default-font-size);
    position: absolute;
    margin-left: 15px;
}

.b-footer.btn-toolbar .btn-group .btn.fontastic:after {
    content: 'SnappyMail-Settings';
}

.b-footer.btn-toolbar .btn-group .btn.icon-folder-add:after {
    content: 'Create new folder';
}

.icon-folder-add::before,
.icon-resize-in::before {
    line-height: unset;
}

.b-footer.btn-toolbar .btn-group .btn:hover,
.b-footer.btn-toolbar .btn-group .btn.fontastic:hover {
    background-color: var(--color-background-hover);
}

.b-footer.btn-toolbar .btn-group .btn:active,
.b-footer.btn-toolbar .btn-group .btn.fontastic:active {
    background-color: var(--color-primary-element-light);
}

.b-footer.btn-toolbar .btn-group .btn:focus,
.b-footer.btn-toolbar .btn-group .btn.fontastic:focus {
    outline: none;
}

#V-MailMessageList .btn-toolbar {
    text-align: center;
}

/*
 * inputs
 */

input {
    padding: 0 12px;
    font-size: var(--default-font-size);
    color: var(--color-main-text);
    background-color: unset;
    height: 36px;
    outline: none;
    border: 2px solid var(--color-border-dark);
    border-radius: var(--border-radius-large);
}

input:hover,
input:active,
input:focus {
    border-color: var(--color-primary-element);
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
    -webkit-appearance: none;
}

input[type=number] { 
    -moz-appearance: textfield;
    -webkit-appearance: textfield; 
    appearance: textfield;
    margin: 0; 
}
/* ... */

